--- a/translated/tech/20221215.2 ⭐️⭐️ Improve your documentation with JavaScript.md
+++ b/translated/tech/20221215.2 ⭐️⭐️ Improve your documentation with JavaScript.md
@@ -222,7 +222,7 @@ via: https://opensource.com/article/22/12/dynamic-documentation-javascript
 
 作者：[Jim Hall][a]
 选题：[lkxed][b]
-译者：[译者ID](https://github.com/duoluoxiaosehng)
+译者：[duoluoxiaosheng](https://github.com/duoluoxiaosehng)
 校对：[校对者ID](https://github.com/校对者ID)
 
 本文由 [LCTT](https://github.com/LCTT/TranslateProject) 原创编译，[Linux中国](https://linux.cn/) 荣誉推出
